# cox-analysis

./: .gitignore  Dockerfile  README.md  start.sh  stop.sh
app/: README.md  app.py  pyproject.toml  routes.py  utils.py
app/data/: merge.py  merge_landslide.py
app/data/flood/: edges_i_j_10yr.csv  edges_i_j_10yr_joined.csv  edges_i_j_20yr.csv  edges_i_j_20yr_joined.csv  edges_i_j_50yr.csv  edges_i_j_50yr_joined.csv  minmax.py
app/data/flood/raw/: edges_i_j_10yr_raw.csv  edges_i_j_50yr_raw.csv
app/data/landslide/: landslide_raw.csv
app/data/network/: clean.py  filtered_nodes.csv  filtered_nodes_projected.csv  nodes.csv  nodes.qmd  reproject.py
app/static/scripts/: index.js
app/static/style/: style.css
app/templates/: index.html  map.html  simulation_results.html
flood-analysis/: analysis.ipynb  terrain.ipynb
flood-analysis/data/: annual_rainfall_from2000.csv  daily_rainfall_from2000.csv
flood-analysis/data/terrain/: cox_terrain.csv
landslide-analysis/: analysis.ipynb  regression.ipynb
landslide-analysis/data/: Landslide_Inventory_of_CHA_Corected.csv  Landslide_Kutupalong.csv  cleaned_landslide_data.csv  cox_landslide_points.csv  cox_landslide_renamed.csv  landslide_data_final.csv  landslide_predictions.csv  landslide_susceptibility.csv  landslide_susceptibility_10yr.csv  landslide_susceptibility_20yr.csv  landslide_susceptibility_50yr.csv
landslide-analysis/data/archive/: cox_landslide_combined.csv  cox_landslide_random.csv  cox_landslide_random.qmd  merged_landslide_data.csv
rainfall-analysis/: analysis.ipynb
test/: test.ipynb
